[package]
name = "oasr-engine-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async ZeroMQ client to the OASR Python engine worker, with a multi-worker pool."

[dependencies]
oasr-wire = { path = "../oasr-wire" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeromq = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
