[package]
name = "oasr-engine-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-process driver for the OASR Python ASREngine via PyO3; per-engine handles + multi-engine pool."

[dependencies]
oasr-wire = { path = "../oasr-wire" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
