[package]
name = "oasr-server-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP routes (axum) for the OASR serving frontend — native + Whisper-compat + WebSocket."

[dependencies]
oasr-wire = { path = "../oasr-wire" }
oasr-engine-client = { path = "../oasr-engine-client" }
oasr-asr = { path = "../oasr-asr" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
