[package]
name = "oasr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OASR serving frontend — HTTP + gRPC binary."

[[bin]]
name = "oasr-server"
path = "src/main.rs"

[dependencies]
oasr-wire = { path = "../oasr-wire" }
oasr-engine-client = { path = "../oasr-engine-client" }
oasr-asr = { path = "../oasr-asr" }
oasr-server-http = { path = "../oasr-server-http" }
oasr-server-grpc = { path = "../oasr-server-grpc" }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
hyper = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
hound = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = { workspace = true }
