[package]
name = "oasr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OASR serving frontend — HTTP + gRPC binary (embeds Python via pyo3/auto-initialize)."

[[bin]]
name = "oasr-server"
path = "src/main.rs"

[dependencies]
oasr-serve = { path = "../oasr-serve" }
# Direct dep solely to enable `auto-initialize`: this binary embeds + links
# libpython.  The feature is additive, so it flips `oasr-serve`'s transitive
# pyo3 to the embedding linkage for this build.
oasr-engine-client = { path = "../oasr-engine-client", features = ["auto-initialize"] }

anyhow = { workspace = true }
clap = { workspace = true }
